create github pages

--- a/kgahetzeggenwalter.html
+++ b/kgahetzeggenwalter.html
@@ -56,7 +56,37 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-s" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-17" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong>
+</strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>‘k Ga het zeggen, Walter
+</strong></p><p><em>sculpture</em></p><p> (2017)</p><p><br></p><p><span style="font-size: 1.07rem; line-height: 1.5;">A little wheel that turns around the middle point of the waiting logo of Apple devices. The pins are set in a way that the flipper al- ways points out at two colors.&nbsp;</span><br></p><p><br></p><p>In Flanders we used to have a TV program, named “Rad van For- tuin”(”Wheel of Fortune”), where the candidates had to guess a word based on the consonants they al- ready won. This led to a compi- lation ridiculous self-invented but very creative words.
+The idea of combining waiting and playing came up while doing nothing in my atelier. There was an urge to do something and play, but an endless feeling of “I don’t know what to doooooo”. This game eventually doesn’t give an answer and leaves one in doubt, but it’s there, I made it and it will definitely lead to something else. The title “I’m going to say it Walter” announces a possible answer and was also the sentence the candidates used when they thought they knew the answer.</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-16" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/walter-1400x2100.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-s" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2017 Celine Aernoudt.</p>
