--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content7-m" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content7-m" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -93,7 +93,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="727NX5la/nLG0OuJCUcnzIPsow95TXY4NRqPZZf4gsdYLX+CF44sSC0SKHWhIb3c7gJ5TE5nQLnAaTPtpKDvLw1lyJp23NR8YGpTqH51vTCoqaLr5uJARmOGgzBR/tmH" data-form-email="true">
+                        <input type="hidden" value="o/11o9CDQf0l9yt8a1OyNzMeZtoUJEQv33mn/oOzx+j/ISQFWuqaG1wm2Vx0/iIEvQbwkgIuAR5xKdJEvZ2I2WMnmJXsiT/W0inRTugG+pt4hnH94q8Gb4A83RMHrMwF" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
