--- a/difficultbutallyours.html
+++ b/difficultbutallyours.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section id="menu-n">
+<section id="menu-v">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +56,68 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-o" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-y" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Difficult but all yours</strong></p><p>puzzles and happening</p><p>(2017)</p><p><br></p><p>Limited edition of 5 puzzles of me crying, put in handmade boxes, raffled at my exhibition "Goedenavond Enchanté Auf Wiedersehen". One ticket cost one euro. The 117 (also the amount of puzzle pieces) losing tickets showed a tear, the 5 winning tickets showed a puzzle piece. All puzzles were taken on the 24th of February at Stellwerk, Kassel.</p><p><br></p><p>This work is not much more than a (word) game. The word "difficult" refers to the level of of the puzzle, the raffle and how I feel, as all yours refers to the puzzle pieces and me being at your command, after winning.</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-z" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/difficultbutallyours1-1400x933.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-18" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/difficult2-1400x933.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-19" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/difficult3-1400x933.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-o" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2017 Celine Aernoudt.</p>
