--- a/ypsilonely.html
+++ b/ypsilonely.html
@@ -56,7 +56,44 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-q" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-12" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content1-15" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Ypsilonely</strong></p><p><em>sculpture</em></p><p>(2017)</p><p><br></p><p>Curved aluminium plate, from which the letter/shape "Y" is cut out, that can rotate by hand/wind.</p><p><br></p><p>Why? "For they say the course of human life resembles the letter Y, because every one of men, when he has reached the treshold of early youth, and has arrived the place "where the way divides itself in two parts" is in doubt, and hesitates, and does not know to which side he should rather turn himself."</p><p>By cutting out the "Y" out of this turnable plate, this letter becomes a form without any direction. Besides this, this letter is also the designation in genetics for masculinity. This advertising manner questions the meanings of this letter and their connection.</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-13" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/ypsilonely-1400x2099.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2017 Celine Aernoudt.</p>
