create github pages

--- a/ZEEP.html
+++ b/ZEEP.html
@@ -56,7 +56,23 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2u" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2v" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>ZEEP</strong></p><p><em>sculpture / performance with Tim Choin</em></p><p><em>"Le savon" by Francis Ponge read by Irma Emmery</em></p><p>(2016)</p><p><br></p><p>During the performance you could see us, in our overalls, cutting and moulding the angular block into the general shape of soap. Mean- while, surrounded by smoke, you could listen to fragments of “Le savon”, a book by Francis Ponge.
+</p><p>The soap currently measures ca. 145 x 40 x 80 centimeters and weighs approximatly 350 kilo- gram.
+</p><p><br></p><p>Soap is a magic stone!
+</p><p>“A kind of stone, but a species that in nature doesn’t roll itself: it slips through your fingers and rather dissolves before your eyes, than by letting it wallow by the water.
+Then the game also consists of this, to grab it between your fin- gers and to provoke it with the right amount of water, in order to bring about a bulky, shiny reaction ...
+When we, on the other hand, lea-ve it in the water, it perishes from confusion.”
+</p><p>(Translated fragment from ‘Le savon’ by Francis Ponge)</p><p><br></p><p><br></p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-2u" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +87,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-2v" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-21" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
