--- a/suddencracklinegestures.html
+++ b/suddencracklinegestures.html
@@ -56,7 +56,19 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-3e" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-3f" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Sudden Crack Line Gestures</strong></p><p><em>performance / ca. 25 min</em></p><p>(2014)</p><p><br></p><p>There are five stacks of plates in the shape of a circle. For as long as it takes, I stack the plates in a clockwise direction, one by one, in the ccntre of the circle. After this tower has fallen down, I sort the boards, intact and broken.</p><p><br></p><p>
+This performance suggests a kind of selection or purification.
+By repeating this specific routine over and over again, it brings about a boredom, because it is obvious what’s happening and what’s next. At the same time there is a certain weight and some tension tangible because of the repeating sound and the necessary concentration of the performer, as well as of the spectator.</p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-3e" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +83,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-3f" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2l" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
