--- a/3398.html
+++ b/3398.html
@@ -56,7 +56,19 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-38" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-39" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>3398</strong></p><p><em>video / 15m01s</em></p><p>(2016)</p><p><br></p><p>This video shows a, partly static partly moving, drawing/delineation on the foreground, while the background moves almost constantly over.
+ </p><p><br></p><p>This drawing is one between the double glass window of a bus. Ac- tually a defect, but nevertheless aninterestingbeautifulfortuitous framework.
+</p><p>An anecdote: Two years earlier, I had seen this “phenomenon” but couldn’t film it any longer than 10 seconds. I spent hours at the bus<span style="font-size: 1.07rem; line-height: 1.5;">station to capture this beautiful thing, but in vain. Eventually, one day at a terrace a bus with water between its window passes by. I wrote down the number of that specific bus. After some mail traffic, I came in contact with Bjorn, who gave me a ride.&nbsp;</span></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-38" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +83,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-39" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2f" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
