--- a/ZEEP#2.html
+++ b/ZEEP#2.html
@@ -56,7 +56,19 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2t" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>ZEEP#2</strong></p><p><em>sculpture / happening with Tim Choin</em></p><p><em>"Le savon" by Francis Ponge read by Irma Emmery</em></p><p>(2016)</p><p><br></p><p>During the performance you could see us, in our overalls, cutting and moulding the angular block into little pieces of soap. Meanwhile, surrounded by evaporating smo- ke, you could listen to fragments of “Le savon”, a book by Francis Ponge. The soapblocks were put in a numbered and signed plastic bag.
+</p><p>The soap measured ca. 145 x 40 x 80 centimeters and weighed ap- proximatly 350 kilogram. At the end of the performance 400 bags, with each one soap block in it, were handed out to the audience.
+</p><p><br></p><p>Since we have a soap this big and heavy, we did another performan- ces in line with the first one. This idea came up since a soap is always reshaping itself in normal use. By putting the soap blocks in num- bered and signed zip-bags, the spectators and eventual owners of this utensil either art object were being asked to use it or keep it.</p><p><br></p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-2s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +83,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-2t" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1z" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
