--- a/aantrede.html
+++ b/aantrede.html
@@ -56,7 +56,20 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2w" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2x" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Aantrede</strong></p><p><em>sculpture</em></p><p>(2016)</p><p><br></p><p>You may see a stairway without treads or three hurdleish things fasten to each other.
+</p><p><br></p><p>This is indeed a stairway without treads.
+It can be seen as a sculpture that can be used as a attribute, but can also be seen as a post-minimal ob- ject. For me, this work follows the same way as Grow some balls. In a way this object likes to present itself to me as a mystery, which I find intriguing. since I indeed made it myself.
+You may also see a certain relation between Aantrede and the inclin- ed surface videoperformances, be- cause of the depth being a surface.</p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-2w" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +84,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-2x" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-23" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
