--- a/fullcarpetframework.html
+++ b/fullcarpetframework.html
@@ -56,7 +56,21 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-34" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-35" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Full carpet framework</strong></p><p><em>videoperformance / videoinstallation / &nbsp;1h20m26s</em></p><p>(2016)</p><p><br></p><p>During this videoperformance, the surface is transformed in 7 fases. First, there’s a green car- pet rolled up, second the surface is being sprinkled, third the sand is shoveled, fourth the sand is smoothened, fifth the surface is wrapped in plastic, sixth the surface is whitened and seventh a green carpet is unrolled.
+</p><p><br></p><p>This work has been created as an extension of the work Framing of an inartificial green key, but de- viates from it because of its trans- formation as a measure, besides the measuring as a measure. This videoperformance is made on another inclined surface, where several actions took place. These actions point out the malleability, beside the more subtle suggested clarification of perspective and depth. Malleability in a immedia- te way, as well as on frame.
+Full carpet framework
+videoperformance and installation / 1h20m26s
+(2016)</p><p><br></p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-34" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +85,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-35" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2b" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
