--- a/raviolifeestmetsterren.html
+++ b/raviolifeestmetsterren.html
@@ -56,7 +56,20 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-36" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-37" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Raviolifeest met sterren</strong></p><p><em>sound / happening</em></p><p>(2016)</p><p><br></p><p>This was a party were I served fresh handmade star-shaped ravioli’s. While eating you could enjoy the wonderful sound of two star-shaped ravioli-cutters bumping irregularly into each other. Raviolifeest 2.0 was a dinner with my jury members.
+</p><p><br></p><p>The sound of these star-shaped ravioli-cutters encouraged me to make a mechanic instrument. This soundproducing mechanic instrument asked for a celebra- tion with handmade star-shaped ravioli’s for the whole class.
+Raviolifeest 2.0 was a reprise of the first party, but only accesible for my jury members. I was won- dering how a jury meeting and presentation at the table, with food and sound, can take place in a more relaxed atmosphere.</p><p><br></p><p>(Translation: Ravioliparty with stars)
+</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-36" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +84,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-37" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2d" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
