--- a/untitled.html
+++ b/untitled.html
@@ -56,7 +56,20 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-3i" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-3j" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong><br></strong></p><p><strong>Untitled</strong></p><p><em>video / 16m08s</em></p><p>(2014)</p><p><br></p><p>This video contains a vast cadre that slowly changes color. There is a countdown beginning from 9. Sometimes the cadre enlightens intensely . When the cadre enlightens, the countdown stops, but the same shot keeps going.
+</p><p><br></p><p>This sequence of frames that nearly change is a slow motion of earlier videos I made. At that time, my camera was only able to film 9 seconds. It was stormy weather and I was waiting for the lightning bolts, enlightning my entire room, to capture.
+</p><p>The combination of the pixels and the numbers are building suspen- se, but do not always redeem.
+</p><p><br></p><p>This video was made for the SLOW Festival where, ofcourse, slowness was the guideline.</p></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-3i" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,16 +84,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-3j" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
-        </div>
-    </div>
-
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2p" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
