--- a/works.html
+++ b/works.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1b" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1b" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -92,7 +92,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="difficultbutallyours.html"><img src="assets/images/difficult3-1400x933.jpg"></a></div>
+                  <div class="mbr-figure"><a href="difficultbutallyours.html"><img src="assets/images/index-difficultbutallyours-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -126,7 +126,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ypsilonely.html"><img src="assets/images/ypsilonely-1400x2099.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ypsilonely.html"><img src="assets/images/index-ypsilonely-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -160,7 +160,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="kgahetzeggenwalter.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="kgahetzeggenwalter.html"><img src="assets/images/index-kgahetzeggenwalter-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -194,7 +194,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/index-didnttheytellyou-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -228,7 +228,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/index-zeeppart2-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -262,7 +262,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ZEEP.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ZEEP.html"><img src="assets/images/index-zeep-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -296,7 +296,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/index-aantrede-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -330,7 +330,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/index-plethorainmountainscene-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -636,7 +636,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/index-roermeniet-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -670,7 +670,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/desktop.jpg"></a></div>
+                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/index-untitled-1400x419.jpg"></a></div>
               </div>
 
             </div>
@@ -678,6 +678,30 @@
     </div>
 
 </section>
+
+<section class="mbr-section mbr-section__container" id="image2-3n" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <figure class="mbr-figure">
+                    <div><img src="assets/images/image1.jpg"></div>
+
+                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
+                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2h" style="background-color: rgb(255, 255, 255); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+    
+    <div class="container">
+        <p class="text-xs-center">Copyright (c) 2017 Celine Aernoudt.</p>
+    </div>
+</footer>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
