--- a/difficultbutallyours.html
+++ b/difficultbutallyours.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-y" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-y" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/difficultbutallyours1-1400x933.jpg"></div>
+                    <div><img src="assets/images/web-difficultbutallyours1-1400x933.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
@@ -88,7 +88,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/difficult2-1400x933.jpg"></div>
+                    <div><img src="assets/images/web-difficult2-1400x933.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
@@ -105,7 +105,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/difficult3-1400x933.jpg"></div>
+                    <div><img src="assets/images/web-difficult3-1400x933.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
