--- a/2014.html
+++ b/2014.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4k" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4k" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="suddencracklinegestures.html"><img src="assets/images/compri-sclh-1-500x152-1400x4250.jpg"></a></div>
+                  <div class="mbr-figure"><a href="suddencracklinegestures.html"><img src="assets/images/compri-sclh-1-500x152-1400x4251.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/index-roermeniet-1400x4191.jpg"></a></div>
+                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/index-roermeniet-1400x4192.jpg"></a></div>
               </div>
 
             </div>
@@ -149,7 +149,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/index-untitled-1400x4192.jpg"></a></div>
+                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/index-untitled-1400x4193.jpg"></a></div>
               </div>
 
             </div>
