--- a/2016.html
+++ b/2016.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4t" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4t" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/index-didnttheytellyou-1400x4198.jpg"></a></div>
+                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/index-didnttheytellyou-1400x4199.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/index-zeeppart2-1400x4199.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/index-zeeppart2-1400x41910.jpg"></a></div>
               </div>
 
             </div>
@@ -149,7 +149,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ZEEP.html"><img src="assets/images/index-zeep-1400x41910.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ZEEP.html"><img src="assets/images/index-zeep-1400x41911.jpg"></a></div>
               </div>
 
             </div>
@@ -183,7 +183,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/index-aantrede-1400x41911.jpg"></a></div>
+                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/index-aantrede-1400x41912.jpg"></a></div>
               </div>
 
             </div>
@@ -217,7 +217,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/index-plethorainmountainscene-1400x41912.jpg"></a></div>
+                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/index-plethorainmountainscene-1400x41913.jpg"></a></div>
               </div>
 
             </div>
@@ -251,7 +251,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="byebyeinfinito.html"><img src="assets/images/bye-bye-infinito-1181x354-1400x41913.jpg"></a></div>
+                  <div class="mbr-figure"><a href="byebyeinfinito.html"><img src="assets/images/bye-bye-infinito-1181x354-1400x41914.jpg"></a></div>
               </div>
 
             </div>
@@ -285,7 +285,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="growsomeballs.html"><img src="assets/images/untitled-index-1181x354-1400x41914.jpg"></a></div>
+                  <div class="mbr-figure"><a href="growsomeballs.html"><img src="assets/images/untitled-index-1181x354-1400x41915.jpg"></a></div>
               </div>
 
             </div>
