--- a/happening.html
+++ b/happening.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-5h" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-5h" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="difficultbutallyours.html"><img src="assets/images/index-difficultbutallyours-1400x41915.jpg"></a></div>
+                  <div class="mbr-figure"><a href="difficultbutallyours.html"><img src="assets/images/index-difficultbutallyours-1400x41916.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/index-zeeppart2-1400x4199.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ZEEP#2.html"><img src="assets/images/index-zeeppart2-1400x41910.jpg"></a></div>
               </div>
 
             </div>
@@ -149,7 +149,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="raviolifeestmetsterren.html"><img src="assets/images/raviolifeest-index-1181x354-1400x4194.jpg"></a></div>
+                  <div class="mbr-figure"><a href="raviolifeestmetsterren.html"><img src="assets/images/raviolifeest-index-1181x354-1400x4195.jpg"></a></div>
               </div>
 
             </div>
