--- a/kgahetzeggenwalter.html
+++ b/kgahetzeggenwalter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-17" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-17" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -74,7 +74,7 @@ The idea of combining waiting and playing came up while doing nothing in my atel
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/walter-1400x2100.jpg"></div>
+                    <div><img src="assets/images/web-kgahetzeggenwalter-1400x2100.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
