--- a/sculpture.html
+++ b/sculpture.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-59" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-59" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="ypsilonely.html"><img src="assets/images/index-ypsilonely-1400x41916.jpg"></a></div>
+                  <div class="mbr-figure"><a href="ypsilonely.html"><img src="assets/images/index-ypsilonely-1400x41917.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="kgahetzeggenwalter.html"><img src="assets/images/index-kgahetzeggenwalter-1400x41917.jpg"></a></div>
+                  <div class="mbr-figure"><a href="kgahetzeggenwalter.html"><img src="assets/images/index-kgahetzeggenwalter-1400x41918.jpg"></a></div>
               </div>
 
             </div>
@@ -149,7 +149,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/index-didnttheytellyou-1400x4198.jpg"></a></div>
+                  <div class="mbr-figure"><a href="didnttheytellyou?.html"><img src="assets/images/index-didnttheytellyou-1400x4199.jpg"></a></div>
               </div>
 
             </div>
@@ -183,7 +183,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/index-aantrede-1400x41911.jpg"></a></div>
+                  <div class="mbr-figure"><a href="Aantrede.html"><img src="assets/images/index-aantrede-1400x41912.jpg"></a></div>
               </div>
 
             </div>
@@ -217,7 +217,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="growsomeballs.html"><img src="assets/images/untitled-index-1181x354-1400x41914.jpg"></a></div>
+                  <div class="mbr-figure"><a href="growsomeballs.html"><img src="assets/images/untitled-index-1181x354-1400x41915.jpg"></a></div>
               </div>
 
             </div>
@@ -251,7 +251,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/index-roermeniet-1400x4191.jpg"></a></div>
+                  <div class="mbr-figure"><a href="roer-me-niet.html"><img src="assets/images/index-roermeniet-1400x4192.jpg"></a></div>
               </div>
 
             </div>
