--- a/series of photograps.html
+++ b/series of photograps.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-5f" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-5f" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="vogelspotten.html"><img src="assets/images/vogeltje-index-1181x354-1400x4197.jpg"></a></div>
+                  <div class="mbr-figure"><a href="vogelspotten.html"><img src="assets/images/vogeltje-index-1181x354-1400x4198.jpg"></a></div>
               </div>
 
             </div>
