--- a/sound.html
+++ b/sound.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-58" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-58" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="raviolifeestmetsterren.html"><img src="assets/images/raviolifeest-index-1181x354-1400x4194.jpg"></a></div>
+                  <div class="mbr-figure"><a href="raviolifeestmetsterren.html"><img src="assets/images/raviolifeest-index-1181x354-1400x4195.jpg"></a></div>
               </div>
 
             </div>
