--- a/suddencracklinegestures.html
+++ b/suddencracklinegestures.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-3f" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-3f" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -73,7 +73,7 @@ By repeating this specific routine over and over again, it brings about a boredo
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/image1.jpg"></div>
+                    <div><img src="assets/images/image10.jpg"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
