--- a/video.html
+++ b/video.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-50" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-50" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/index-plethorainmountainscene-1400x41912.jpg"></a></div>
+                  <div class="mbr-figure"><a href="plethorainmountainscene.html"><img src="assets/images/index-plethorainmountainscene-1400x41913.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="3398.html"><img src="assets/images/3398-1419x432-1400x4265.jpg"></a></div>
+                  <div class="mbr-figure"><a href="3398.html"><img src="assets/images/3398-1419x432-1400x4266.jpg"></a></div>
               </div>
 
             </div>
@@ -149,7 +149,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/index-untitled-1400x4192.jpg"></a></div>
+                  <div class="mbr-figure"><a href="untitled.html"><img src="assets/images/index-untitled-1400x4193.jpg"></a></div>
               </div>
 
             </div>
