--- a/videoinstallation.html
+++ b/videoinstallation.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-56" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-56" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -81,7 +81,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="byebyeinfinito.html"><img src="assets/images/bye-bye-infinito-1181x354-1400x41913.jpg"></a></div>
+                  <div class="mbr-figure"><a href="byebyeinfinito.html"><img src="assets/images/bye-bye-infinito-1181x354-1400x41914.jpg"></a></div>
               </div>
 
             </div>
@@ -115,7 +115,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><a href="fullcarpetframework.html"><img src="assets/images/fcf-index-1181x354-1400x4193.jpg"></a></div>
+                  <div class="mbr-figure"><a href="fullcarpetframework.html"><img src="assets/images/fcf-index-1181x354-1400x4194.jpg"></a></div>
               </div>
 
             </div>
